--- a/app/src/main/res/layout/activity_sign_in_actvity.xml
+++ b/app/src/main/res/layout/activity_sign_in_actvity.xml
@@ -48,10 +48,12 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/email_signin_page"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableRight="@drawable/ic_email_black"
+            android:drawableLeft="@drawable/ic_email_black"
             android:hint="Email"
+            android:drawablePadding="10dp"
             android:inputType="textEmailAddress"/>
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -69,6 +71,7 @@
         app:passwordToggleEnabled="true">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/password_signin_page"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Password"
