--- a/app/src/main/res/layout/activity_sign_in_actvity.xml
+++ b/app/src/main/res/layout/activity_sign_in_actvity.xml
@@ -67,8 +67,7 @@
         android:layout_marginEnd="45dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
-        app:passwordToggleEnabled="true">
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/password_signin_page"
