--- a/app/src/main/res/layout/activity_sign_in_actvity.xml
+++ b/app/src/main/res/layout/activity_sign_in_actvity.xml
@@ -27,7 +27,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
-        android:text="Jesil Brain Improment Study"
+        android:text="Jesil Brain Improvement Study"
         android:textAlignment="center"
         android:textColor="#F1B474"
         android:textSize="25sp"
@@ -89,4 +89,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
+
+    <ProgressBar
+        android:id="@+id/progressBar_signIn"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:layout_constraintBottom_toBottomOf="@+id/button_sign_in2"
+        app:layout_constraintEnd_toEndOf="@+id/button_sign_in2"
+        app:layout_constraintStart_toStartOf="@+id/button_sign_in2"
+        app:layout_constraintTop_toTopOf="@+id/button_sign_in2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
